refactor(common): minimize classpath discovery changes against master